--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ dj-database-url==0.5.0
 Django==4.0.2
 django-allauth==0.48.0
 django-heroku==0.3.1
+django-phonenumber-field==6.1.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
+phonenumbers==8.12.44
 Pillow==9.0.1
 psycopg2==2.9.3
 pycparser==2.21
